syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Mastodon.Grpc";

message WebPushSubscription
{
    string id = 1;
    string endpoint = 2;
    Alerts alerts = 3;
    string server_key = 4;

    message Alerts
    {
        bool follow = 1;
        bool favourite = 2;
        bool reblog = 3;
        bool mention = 4;
        bool poll = 5;
    }
}
